Fixed pitch colour curve, and increased contrast on text for themes.

--- a/resources/css/fabdb.css
+++ b/resources/css/fabdb.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    height: 100%;
-}
-
 * {
     scrollbar-width: thin;
 }
@@ -15,7 +11,7 @@ body {
     --button-disabled-text-color: theme("colors.white");
     --crumbs-text-color: theme('colors.white');
     --link-hover-color: theme("colors.white");
-    --main-text-color: theme('colors.gray.800');
+    --main-text-color: theme('colors.gray.900');
     --nav-text-color: theme('colors.white');
     --nav-hover-background-color: theme('colors.black');
 }
